--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'Virginia -- Fiction'
+- GITenberg
 title: The Valiants of Virginia
 url: http://www.gutenberg.org/ebooks/33963
